-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
3
-
965af8548 (dev), d6865ad65 (6.9), a29d57c34 (tqtc/lts-6.8)
-
Foundation Sprint 129
Currently compiling Qt for Android fails if permissions -feature is disabled.
- is cloned by
-
QTBUG-135675 Compile Android without clipboard -feature
-
- Closed
-
-
QTBUG-136101 Minimal configuration compile with autotests
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135617 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 637541,6 | Make Qt for Android compile without permissions -feature | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 641444,2 | Make Qt for Android compile without permissions -feature | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 641552,2 | Make Qt for Android compile without permissions -feature | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |