Make Qt for Android compile without permissions -feature

The permissions were partially behind 'future' feature flag.
Instead put permission code behind the actual 'permissions'
feature flag, and require 'future' feature if permissions
are enabled.

Fixes: QTBUG-135617
Pick-to: 6.8
Change-Id: I573cca6a56c19bfc32a3f1df72a009cbe05ad2fb
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 965af8548cb804a0edb13ce167bd9daae0da3ed0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>